--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,8 @@ events { worker_connections 1024; }
 rtmp {
   server {
     listen 1935;
+    chunk_size 4096;
+
     application live {
       live on;
       record off;
@@ -18,9 +20,10 @@ rtmp {
 http {
   server {
     listen 8080;
+
     location / {
       root /tmp/hls;
-      add_header Access-Control-Allow-Origin *;
+      add_header 'Access-Control-Allow-Origin' '*';
       types { application/vnd.apple.mpegurl m3u8; video/mp2t ts; }
     }
   }
