--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,55 @@
 worker_processes 1;
-events { worker_connections 1024; }
+
+events {
+    worker_connections 1024;
+}
 
 rtmp {
-  server {
-    listen 1935;
-    chunk_size 4096;
+    server {
+        listen 1935;
+        chunk_size 4096;
 
-    application live {
-      live on;
-      record off;
-      hls on;
-      hls_path /tmp/hls;
-      hls_fragment 4;
-      hls_playlist_length 20;
+        application live {
+            live on;
+            record off;
+            hls on;
+            hls_path /tmp/hls;
+            hls_fragment 4;
+            hls_playlist_length 20;
+        }
     }
-  }
 }
 
 http {
-  server {
-    listen 8080;
+    server {
+        listen 8080;
 
-    location / {
-      root /tmp/hls;
-      add_header 'Access-Control-Allow-Origin' '*';
-      types { application/vnd.apple.mpegurl m3u8; video/mp2t ts; }
+        # Serve HLS files for the Sky Cricket stream
+        location /live {
+            root /tmp/hls;
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Cache-Control' 'no-cache';
+            types {
+                application/vnd.apple.mpegurl m3u8;
+                video/mp2t ts;
+            }
+        }
+
+        # Root page - prevent 403 and show info
+        location / {
+            default_type text/html;
+            return 200 "
+                <html>
+                    <head><title>Sky Cricket Stream</title></head>
+                    <body style='font-family:sans-serif; text-align:center; padding-top:50px;'>
+                        <h2>Sky Cricket Stream is live!</h2>
+                        <p>Watch via your player:</p>
+                        <p><a href='/live/sky/index.m3u8'>/live/sky/index.m3u8</a></p>
+                        <hr/>
+                        <small>Powered by Render + Nginx RTMP + FFmpeg</small>
+                    </body>
+                </html>
+            ";
+        }
     }
-  }
 }
